fix: remover pasta .context-map/ externa desnecessária
🗑️ Problema identificado:
- Scanner principal salva dados em .context-navigator/context-map/ (OK)
- Scripts auxiliares procuram dados em .context-map/ (ERRO)
- Instalador cria pasta .context-map/ externa (LIXO)

✅ Correções aplicadas:
- Instalador: não cria mais pasta .context-map/ externa
- .contextrc: context_maps_path corrigido para pasta interna
- .gitignore: removida referência à pasta externa
- Comentários: explicando que pasta externa era lixo

🎯 Resultado:
- Scanner principal: continua funcionando perfeitamente
- Scripts auxiliares: agora procuram dados no local correto
- Workspace: não é mais 'sujo' com pasta externa
- Dados: unificados em .context-navigator/context-map/

🙏 Créditos: Análise da IA estava 100% correta!

--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,7 @@ dmypy.json
 
 # Context Navigator específico
 .context-navigator/
-.context-map/
+# .context-map/ - Removido: pasta externa era lixo de versões anteriores
 *-backup-*/
 
 # IDEs
